test/runnable/hello-world.crow.ast.repr
file-ast(
	imports: ports(range(0, 25), [import-ast(0, "/io/print", some([print]))])
	specs: []
	aliases: []
	structs: []
	funs: [
		fun-decl(
			public?: true
			sig: sig-ast(
				range(25, 48)
				main
				inststruct(range(30, 37), name-range(30, fut), [inststruct(range(34, 37), name-range(34, nat))])
				[
					param(
						range(38, 47)
						none
						inststruct(range(40, 47), name-range(40, arr), [inststruct(range(44, 47), name-range(44, str))]))])
			summon: true
			body: seq-ast(
				call(prefix, name-range(57, print), [], [literal("Hello, world!")])
				call(infix, name-range(83, resolved), [], [literal(nat(0, false))])))])
