test/parse-errors/need-block-context.crow.ast.repr
file-ast(
	specs: []
	aliases: []
	structs: []
	funs: [
		fun-decl(
			visibility: public
			sig: sig-ast(range(0, 8), f, inststruct(range(2, 6), name-range(2, void)), [])
			body: seq-ast(
				seq-ast(
					if(bogus, literal(nat(0, false)), some(literal(nat(1, false))))
					match(
						bogus
						[
							case(range(44, 57), some, none, literal(nat(0, false)))
							case(range(57, 70), none, none, literal(nat(1, false)))]))
				match(lambda([], bogus), [])))])
